--- a/.github/workflows/deken.yml
+++ b/.github/workflows/deken.yml
@@ -19,9 +19,10 @@ jobs:
 
       - name: Install Deken
         run: |
-          sudo apt install deken
+          sudo apt-get update -y
+          sudo apt-get install -y deken
 
-      - name: Build and Upload Package
-        run: |
-          deken package . -v ${{ github.event.inputs.LibraryVersion }} -n orchidea
-          deken upload *.dek
+      # - name: Build and Upload Package
+      #   run: |
+      #     deken package . -v ${{ github.event.inputs.LibraryVersion }} -n orchidea
+      #     deken upload *.dek
