--- a/.github/workflows/deken.yml
+++ b/.github/workflows/deken.yml
@@ -30,14 +30,10 @@ jobs:
           cp -r orchidea.py deken/developer/orchidea/
           cp -r README.md deken/developer/orchidea/
       
-      - name: Print Folder
-        run: | 
-          echo ${{ secrets.DekenPassword }}
-
       - name: Set config for deken
         run: |
           mkdir -p ~/.deken && touch ~/.deken/config
-          echo "username = charlesneimog" >> ~/.deken/config
+          echo "username = ${{ secrets.DekenUsername }}" >> ~/.deken/config
           echo "password = ${{ secrets.DekenPassword }}" >> ~/.deken/config
 
       
