--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "py4pd-orchidea" 
 version = "0.1.1" 
-description = "py4pd-orchidea is a Pure Data (Pd) external object that allows to use the Orchidea SOL samples library." # Description
+description = "py4pd-orchidea is a Pure Data (Pd) external object that allows to use the Orchidea SOL samples library." 
+dependencies = [
+    "pandas",
+]
 
 [project.urls]
 "Source Code" = "https://github.com/charlesneimog/py4pd-orchidea" 
